# stm32xboot

./: .gitignore  ReadMe.md  todos.h  upload.sh
Application/: Application.ioc  CMakeLists.txt  CMakePresets.json  STM32F103XX_SLOTA.ld  STM32F103XX_SLOTB.ld
Application/Core/Inc/: debug.h  flash.h  main.h  metadata.h
Application/Core/Src/: flash.c  main.c  metadata.c  system_stm32f1xx.c
Application/cmake/: gcc-arm-none-eabi.cmake  starm-clang.cmake
Application/cmake/stm32cubemx/: CMakeLists.txt
BL_HW_AGN/: CMakeLists.txt
BL_HW_AGN/bl_src/: main.c  main.h
BL_HW_AGN/middleware/crypto/: aes_ctr.c  verify.c
BL_HW_AGN/middleware/fwupdate/: metadata.c  metadata.h  uart_reception.c
BL_HW_AGN/platform/: platform.h
BL_HW_AGN/platform/bsp/f103rb/: board_config.h
BL_HW_AGN/platform/stm32/f1/: stm32f1xx_hal_conf.h
BL_HW_AGN/platform/stm32/f1/pal/: pal_crc.c  pal_flash.c
Bootloader_F103RB/: Bootloader_F103RB.ioc  CMakeLists.txt  STM32F103XX_BOOT.ld
Bootloader_F103RB/Core/Inc/: debug.h  flash.h
Bootloader_F103RB/Core/Inc/Middleware/: metadata.h  uart_reception.h
Bootloader_F103RB/Core/Src/: flash.c  main.c  printf-stdarg.c
Bootloader_F103RB/Core/Src/Middleware/: metadata.c  uart_reception.c
Bootloader_F103RB/cmake/: gcc-arm-none-eabi.cmake  starm-clang.cmake
Bootloader_F103RB_DMA/: CMakeLists.txt  bootloader_report.docx
Bootloader_F103RB_DMA/Core/Inc/: aes_ctr.h  flash.h  includes.h  metadata.h  uart_reception.h
Bootloader_F103RB_DMA/Core/Src/: aes_ctr.c  flash.c  main.c  metadata.c  uart_reception.c
F103_Resources/stsw-link007/: readme.txt
F103_Resources/stsw-link007/MacOS/STLinkUpgrade.app/Contents/: CodeResources  Info.plist
F103_Resources/stsw-link007/MacOS/STLinkUpgrade.app/Contents/MacOS/: javaLauncher
F103_Resources/stsw-link007/MacOS/STLinkUpgrade.app/Contents/Resources/: STLinkUpgradeIcon.icns
F103_Resources/stsw-link007/MacOS/STLinkUpgrade.app/Contents/_CodeSignature/: CodeDirectory  CodeRequirements  CodeRequirements-1  CodeResources  CodeSignature
Python/: .gitignore  encrypt_firmware.py  send_test_ab.py  send_test_dma.py
Tools/: encrypt_firmware.py  keygen.py  requirements.txt  send_test_ab.py  sign_firmware.py
scripts/: .gitignore  keygen.py  send_test_ab.py
stmboot/: CMakeLists.txt  CMakePresets.json
stmboot/boot/: includes.h  logging.h  main.c
stmboot/bootutil/crypto/: aes_ctr.h  public_key.h  verify.h
stmboot/bootutil/fwupdate/: metadata.c  metadata.h  uart_reception.c  uart_reception.h
stmboot/tests/: CMakeLists.txt
stmboot/tests/static/: clang-tidy-fixes.yaml  cppcheck.xml
stmboot/tests/unit/: tbd.txt
